[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "splunk-sdk"
dynamic = ["version"]
authors = [{ name = "Splunk, Inc.", email = "devinfo@splunk.com" }]
license.file = "LICENSE"
requires-python = ">=3.7"
description = "The Splunk Software Development Kit for Python"
readme = "README.md"
dependencies = ["deprecation>=2.1.0"]
classifiers = [
    "Programming Language :: Python",
    "Development Status :: 6 - Mature",
    "Environment :: Other Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

[project.urls]
Homepage = "http://github.com/splunk/splunk-sdk-python"


[project.optional-dependencies]
test = ["tox>=4.8.0", "pytest>=7.4.4"]
build = ["twine", "build"]

[tool.setuptools]
packages = ["splunklib", "splunklib.modularinput", "splunklib.searchcommands"]


[tool.setuptools.exclude-package-data]
"*" = ["tests/*"]
